# forever-jukebox-android

./: .gitignore  README.md  build.gradle.kts  detekt.yml  settings.gradle.kts
.github/workflows/: android-ci.yml  android-release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: theme.json
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/local_analysis_jni/: local_analysis_jni.cpp
app/src/main/java/com/foreverjukebox/app/: MainActivity.kt
app/src/main/java/com/foreverjukebox/app/audio/: BufferedAudioPlayer.kt
app/src/main/java/com/foreverjukebox/app/autocanonizer/: AutocanonizerController.kt  AutocanonizerModel.kt  AutocanonizerPlayer.kt
app/src/main/java/com/foreverjukebox/app/cast/: CastAppIdResolver.kt  ForeverJukeboxCastOptionsProvider.kt
app/src/main/java/com/foreverjukebox/app/data/: ApiClient.kt  ApiModels.kt  AppMode.kt  AppPreferences.kt  Constants.kt  Favorites.kt  TrackIdentity.kt
app/src/main/java/com/foreverjukebox/app/engine/: Graph.kt  JukeboxEngine.kt  Random.kt  Selection.kt  Types.kt
app/src/main/java/com/foreverjukebox/app/local/: AudioResampler.kt  LocalAnalysisException.kt  LocalAnalysisModels.kt  LocalAnalysisService.kt  LocalAnalyzer.kt  LocalAudioDecoder.kt  MadmomBeatsPortModelExtractor.kt  NativeAnalysisBridge.kt
app/src/main/java/com/foreverjukebox/app/playback/: ForegroundPlaybackService.kt  PlaybackController.kt
app/src/main/java/com/foreverjukebox/app/ui/: App.kt  AppLifecycleCoordinator.kt  AppModeToggle.kt  AutoMarqueeText.kt  CastController.kt  CastPlaybackCoordinator.kt  CastRouteButton.kt  CastSessionCoordinator.kt  CastStatusReducer.kt  Dialogs.kt  FaqPanel.kt  FavoritesController.kt  FullscreenActivity.kt  Header.kt  InputPanel.kt  ListenLinkCoordinator.kt  LocalAnalysisCoordinator.kt  MainViewModel.kt  PlayPanel.kt  PlayPanelSections.kt  PlaybackCoordinator.kt  PlaybackModeChange.kt  PlaybackTransport.kt  SearchCoordinator.kt  SearchPanel.kt  ServerTrackLoadCoordinator.kt  SquareIconButton.kt  Tabs.kt  Theme.kt  ThemeConfig.kt  TopSongsPanel.kt  TuningCoordinator.kt  TuningParamsCodec.kt  UiConstants.kt  UiPolicies.kt  UiState.kt  Versioning.kt
app/src/main/java/com/foreverjukebox/app/visualization/: AutocanonizerVisualization.kt  JukeboxVisualization.kt  Positioners.kt
app/src/main/jniLibs/: README.md
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/foreverjukebox/app/autocanonizer/: AutocanonizerControllerTest.kt  AutocanonizerModelTest.kt
app/src/test/java/com/foreverjukebox/app/cast/: CastAppIdResolverTest.kt
app/src/test/java/com/foreverjukebox/app/data/: ApiClientPublicApiTest.kt  ApiModelsContractTest.kt
app/src/test/java/com/foreverjukebox/app/engine/: AnalysisParserTest.kt  DeleteResetParityFixtureTest.kt  GraphAnchorSelectionTest.kt  GraphCoreParityTest.kt  GraphOutputParityFixtureTest.kt  JukeboxEngineParityTest.kt  NoAnchorParityFixtureTest.kt  ParityFixtureTest.kt  PathReproParityFixtureTest.kt  RandomParityTest.kt  RebuildParityFixtureTest.kt  SelectionTest.kt  ThresholdSweepParityFixtureTest.kt
app/src/test/java/com/foreverjukebox/app/local/: LocalAnalysisServiceTest.kt  NativeAnalysisBridgeTest.kt
app/src/test/java/com/foreverjukebox/app/playback/: BluetoothDisconnectAutoPausePolicyTest.kt  SleepTimerServiceBehaviorTest.kt
app/src/test/java/com/foreverjukebox/app/ui/: AppLifecycleCoordinatorPolicyTest.kt  AppModePolicyTest.kt  CastNotificationPolicyTest.kt  CastSessionCoordinatorPolicyTest.kt  CastStatusReducerTest.kt  FavoritesUiPolicyTest.kt  FormatAndUrlPolicyTest.kt  ListenLinkCoordinatorTest.kt  ListenPulsePolicyTest.kt  MainViewModelCastQueueTest.kt  PlayPanelCastPolicyTest.kt  PlaybackCoordinatorStatusPolicyTest.kt  PlaybackModeChangePlanTest.kt  PlaybackModeChangeTest.kt  PlaybackTransportTest.kt  PlaybackUiPolicyTest.kt  SearchCoordinatorStateGuardTest.kt  ServerModeRegressionTest.kt  SleepTimerDialogSelectionTest.kt  SleepTimerOptionMappingTest.kt  ThemeConfigParsingTest.kt  TuningCoordinatorCastPolicyTest.kt  TuningParamsCodecTest.kt  VersioningTest.kt
app/src/test/java/com/foreverjukebox/app/visualization/: AutocanonizerVisualizationMathTest.kt
test-fixtures/engine-parity/: anchor-cases.json  delete-reset-cases.json  graph-output-cases.json  no-anchor-cases.json  path-repro-cases.json  rebuild-cases.json  threshold-sweep-cases.json
